<resources>
    <string name="app_name" translatable="false">জমি, মাটি,বালু, পাথর পরিমাপক</string>
    <string name="version_name" translatable="false">সংস্করণ : 1.0</string>
    <string name="app_info" translatable="false">Email: support@nurnobishanto.com
        \nWebsite: https://nurnobishanto.com
        \nFb: https://fb.com/TechZwebapp
        \nTelegram: https://t.me/techzweb
    </string>

    <string name="info" translatable="false">জমি-জমা যে কত গুরুত্বপূর্ণ সেটা বলার অপেক্ষা রাখেনা।জমি ক্রয়-বিক্রয় বা পৈতৃকসূত্রে প্রাপ্ত জমির ওয়ারিশদের সঙ্গে ভাগ বাটোয়ারা, আমীন বা প্রতিপক্ষের চাতুরী ইত্যাদি থেকে নিজের জমির পরিমাণটা সঠিক রাখতে বা পেতে প্রত্যেকেরই জমির মাপটা জানা প্রয়োজন।এ ক্ষেত্রে নিজেই জমি মেপে পরিমাণ সম্বন্ধে নিশ্চিত হওয়া য়ায়।
\n\nজমি মাপার মূল সূত্র হলো দৈর্ঘ X প্রস্থ = ক্ষেত্রফল। তবে জমির আকারভেদে এই ক্ষেত্রফল বের করার কিছু ভিন্ন বা সহজীকরণ নিয়ম রয়েছে। যেমন:
\n\n<u><b>বর্গক্ষেত্রের বেলায় :</b></u>
\nক্ষেত্রফল = বাহু X বাহু
\nকর্ণ = ১ বাহু X ১.৪১৪
\nপরীসিমা= ১ বাহু X ৪
\nবর্গক্ষেত্রের বাহুগুলির দৈর্ঘ্য ১২০ লিংক করে হলে ক্ষেত্রফল হবে;
\nক্ষেত্রফল= বাহু X বাহু = ১২০ X ১২০= ১৪৪০০ বর্গলিংক
\nআমরা জানি ১ শতাংশ = ১০০০ বর্গ লিংক
\nতাহলে জমির পরিমাণ,
\n১০০০ বর্গ লিংক = ১ শতাংশ
\n১ বর্গ লিংক = ১০০০ ভাগের ১ ভাগ
\n১৪৪০০ বর্গ লিংকে হবে; ১৪৪০০ বর্গ লিংকে ১০০০ দিয়ে ভাগ দিলে ১৪.৪০ শতাংশ হবে।

\n\n<b><u>জমি মাপার বিভিন্ন একক:</u></b>
\n১ শতাংশ = ১০০০ বর্গলিংক
\n১ শতাংশ = ৪৩৫.৬০ বর্গ ফুট
\n১ শতাংশ = ১৯৩.৬০ বর্গহাত
\n১ শতাংশ = ৪৮.৪০ বর্গগজ
\n১ শতাংশ = ৪০.৪৭ বর্গ মিটার\n
\n<b>মাপ সাধারণত তিন প্রকার:</b> রৈখিক বা আর এফ টি, বর্গ বা স্কয়ার এফ টি, ঘনফুট বা সিএফটি\n
\n<b><u>জমি মাপার যন্ত্রপাতি ও তার ব্যাবহার:</u></b>

\n\n<b><i>গান্টার শিকল:</i></b>
\nএডমন্ড গান্টার এই শিকলের আবিষ্কারক। এটা ৬৬ ফুট লম্বা এবং ১০০ টি সমান ভাগে বিভক্ত। প্রতি ভাগের দৈর্ঘ্য ০.৬৬ ফুট বা ৭.৯২ ইঞ্চি। প্রতি ভাগকে ১ লিংক বলে।
\n৮০ শিকল = ১ মাইল
\n১০ শিকল = ১ ফার্লং

\n\n<b><i>ডায়াগনার স্কেল :</i></b>
\nএটি হলো একটি চার কোনা বিশিষ্ট তামা ও ব্রোঞ্জের তৈরি স্কেল। এটির চার পাশে ১০ টি ঘর বা কক্ষ থাকে। প্রতিটি ঘরের মান ১০০ লিংক। ১৬”=১ মাইল স্কেলে এটি তৈরি করা হয়। এবং গান্টার চেইনর সাথে মিল আছে বলে একে গান্টার স্কেল বলা হয়।
\n\n<b><i>আইভার অফসেট:</i></b>
\nএটি একটি প্লাষ্টিকের তৈরি স্কেল। এই স্কেলের সাথে গান্টার স্কেলের মিল আছে। এর দৈর্ঘ্য
২’’ এবং প্রস্ত .৫” (ইঞ্চি) এই স্কেলের সাহায্যে নকশার সংকোচিত দুরত্ব সহজে মাপা যায়।
\n\n
<b><i>ডিভাইডার বা কাটা কম্পাস:</i></b>\n
এটি একটি জ্যামিতিক কম্পাস। এটির সাহায্যে নকশার সংকোচিত দুরত্ব নিয়ে ডাইগোনাল স্কেলে মাপ\n
নেয়া যায় এবং দুরত্ব গুনে গুনে সংখ্যা বুঝা যায়।\n\n
<b><u>ভূমি পরিমাপের পদ্ধতি:</u></b>
\n\n
        <b><i>ভূমি জরিপকালে যে সব পদ্ধতি ব্যবহার করা হয় তা হল:</i></b>
\n
শিকল জরিপ\n
কম্পাস জরিপ\n
প্লেনটেবিল জরিপ\n
থিয়োডোলাইট জরিপ\n\n
<b><i>শিকল জরিপ:</i></b>
\n
ভূমি জরিপের জন্য শিকল জরিপ সবচেয়ে সহজ। য়ে জায়গায় জরিপ করতে হবে তা কতকগুলো ত্রিভুজে ভাগ করে নিতে হয় এবং ত্রিভুজের বাহুগুলোর দৈর্ঘ্য শিকল দিয়ে মাপা হয়। জ্যামিতিক ক্ষেত্রগুলির মধ্যে ত্রিভুজ অংকন পদ্ধতি সহজ।এ ক্ষেত্রে পুরো জায়গাটিকে সারি সারি ত্রিভুজে ভাগ করে নিতে হয়। ত্রিভুজের কোণগুলি ৬০ ডিগ্রির করা বা ১২০ ডিগ্রির বেশী না হয় তা দেখতে হবে। মাঠের মাঝামাঝি দিয়ে একটি বা দুটি মেরুদন্ড রেখা টেনে নেয়া যায়। এই মেরুদন্ড রেখার সাথে প্রধান প্রধান ত্রিভুজগুলো আবদ্ধ থাকে এবং বড় বড় ত্রিভুজগুলোকে আরো ছোট ছোট ত্রিভুজে বিভক্ত করতে হবে। এভাবেই শিকল জরিপ সম্পন্ন হয়।
\n\n<b><i>কম্পাস জরিপ:</i></b>
\n
এতে দুই ধরনের কম্পাস ব্যবহার করা হয়। এ কম্পাস দুটি হল প্রিজমেটিক কম্পাস এবং সার্ভেয়ারস কম্পাস। বিস্তারিত নকশা প্রণয়ন, রাস্তা, নদী এবং ধারাবাহিক রেখার নকশা প্রণয়ন কাজে প্রিজমেটিক কম্পাস ব্যাবহার করা হয়। আর বড় নদী বা সমুদ্র এলাকায় যখন বিশাল চর জেগে উঠে তখন তা নরম থাকে। তার ওপর দিয়ে চলাফের করা যায় না। তখন কম্পাস জরিপের মাধ্যমে তার অবস্থান, সীমানা এবং আয়তন নির্ধারণ করা হয়ে থাকে।
\n\n<b><i>খতিয়ান কী এবং কেন?</i></b>
\n
প্রত্যেকটি এলাকায় বা প্রত্যেক মৌজায় জমি পরিমাপের জন্য মানচিত্র আছে এবং তার একটি দাগ নং আছে।এটাকে খতিয়ান বলা হয়। ভূমি জরিপের মাধ্যমে খতিয়ান সৃষ্টি করা হয়। এগুলি ক্রমিক সংখ্যা দ্বারা সাজানো হয়। এই সংখ্যাকে খতিয়ান নম্বর বলে। খতিয়ান বলতে ক্রমিক নং বা খতিয়ান নম্বর, জমির মালিকের নাম, পিতার বা স্বামীর নাম মালিকের অংশ বা মালিকের মোট জমির পরিমাণ, দাগ নং বা যে দাগে জমিটি অবস্থিত উক্ত দাগে মোট জমির শ্রেণী, রাজস্ব প্রদেয় জেলার নাম বা যে জেলায় জমিটি অবস্থিত, থানা বা উপজেলার নাম জে এল নাম্বার (জুরিসডিকশন লিস্ট) তৌজি নাম্বারসহ ভূমির মালকানার বিবরণকেই বলি। তাই সাবেক খতিয়ান এবং বর্তমান খতিয়ান পর্যালোচনা করলেই আমরা ভূমি মালিকানার ধারাবাহিকতা দেখতে পারব।
অনেক প্রয়োজনে খতিয়ান সংশোধন করতে হয়। জমি বিক্রয়ের মাধ্যমে হস্থান্তর বা উত্তরাধীকারের ফলে জমির মালিকানা হস্তান্তরিত হলে তার জন্য নাম খারিজ করা হলে খতিয়ান সংশোধন হয়। সরকার কর্তৃক জমি ক্রয়কৃত হলে খতিয়ান সংশোধন হয়। জমি পরিত্যাগ বা বিলুপ্তি বা অর্জনের কারণে খাজনা মউকুফ হলে খতিয়ান সংশোধন হয়। একটি খতিয়ান তৈরী হলে যদি তাতে ভূল থাকে তাহলে তা সংশোধনের জন্য প্রয়োজনীয় তথ্যাদিসহ স্থানীয় দেয়ানী আদালতে মামলা দায়ের করতে হয়। দেয়ানী আদালত যদি মনে করে খতিয়ানে ভূল আছে তাহলে প্রয়োজনীয় শুনানী শেষে সংশ্লিষ্ট প্রমাণপত্র বিশ্লেষন করে সংশোধনের আদেশ দেন।
\n\n<b><i>নামজারি বা মিউটেশন:</i></b>
\n
‘নামজারি বা মিউটেশন’ একটি গুরুত্বপূর্ণ বিষয় যা জমি ক্রয়ের পর বা মালিকানা পরিবর্তন এর পর ক্রেতাকে করতে হয়। বিক্রয়, দান, বিনিময় ইত্যাদির মাধ্যমে খতিয়ানভুক্ত জমি হস্তান্তর করা হলে উক্ত খতিয়ান হতে হস্তান্তরিত ভূমির পরিমাণ ওই খতিয়ান হতে বাদ দিয়ে হস্তান্তর গ্রহীতার বা যে ব্যক্তি জমি ক্রয় করেছেন বা ক্রেতার নামে খতিয়ান খুলে তাতে অন্তর্ভুক্ত করা হয়। হস্তান্তরিত ভূমির প্রকৃত প্রজা কে এবং যার নিকট হতে খাজনা আদায় করা হবে তার জন্য স্বত্বলিপি বা খতিয়ান প্রস্তুত করা হয়।
\n\n
       <b>গোল কাঠের হিসাব, দরজার কাঠের হিসাব, কাঠের হিসাব কিভাবে করব</b>
\n\n
        আমরা আজকে গোল কাঠের হিসাব সূত্র জানবো\n\n
গোল কাঠের হিসাব\n
*{(বেড়xবেড়)ফুট xলম্বা ফুট }÷১৬=CFT\n

যেমন\n
একটি গোল কাঠের বেড় ১০ ফুট ও লম্বা ১৭ফুট হলে কাঠটি কত CFT?\n
সমাধান\n
={(১০x১০)x ১৭}÷১৬\n
={১০০x১৭}÷১৬\n
=১৭০০÷১৬\n
=১০৬.২৫CFT\n\n

সাইজ কাঠের সূত্র\n\n



দৈঘ্য * প্রস্থ* থিকনেস/১৮৮= সি এফ টি ।\n\n

অথবা\n\n



দৈঘ্য * প্রস্থ* পুরুত/১৭২৮= সি এফ টি।\n

গুড়ি কাঠের সূত্র\n\n

(বেড় *বেড়)* লম্বা/১৬= সি এফ টি।\n
গোল কাঠের হিসাব\n\n

গোল কাঠের মাপের সকল সূত্র\n
গোল কাঠের সিএফটি, বা গাছের সিএফটি বের করা নিয়ে অনেকের ভিন্নমত আছে\n\n

বাজারে প্রচলিত\n
ইঞ্চি × ইঞ্চি × ফিট ÷ ২৩০৪\n\n

এই সুত্রের কোনটা কোথা থেকে আসলো?\n\n

বা গানিতিক ভাবে\n
πr^2×h\n
সুত্রে বাজারের প্রচলিত মাপের সাথে মেলে না কেন?\n\n

তবে চলুন সরাসরি চলে যাই মূল বিষয়ে৷\n\n

ইংরেজ সার্ভেয়ার এড ওয়ার্ড হপ্পাস ১৭৩৬ সালে তার ব্যবহারিক গণনার ম্যানুয়ালটিতে এই পরিমাপটি প্রবর্তন করেছিলেন।\n\n

তো এই হপ্পাস সাহেব মনে করতেন প্রসেসিংয়ের পরে কোন বৃত্তাকার লগের ভলিউম কতটুকু ব্যবহারযোগ্য কাঠ হবে তা অনুমান করার জন্য৷ লগটিকে গোলাকার থেকে বর্গাকার আকৃতি কল্পনা করতে হবে৷ এবং এই আকৃতি পরিবর্তনের জন্য কিছু কাঠের অপচয় ধরে নিতে হবে৷
\nওনার মতে
\nঅপচয় ২১.৫% এবং ব্যাবহার উপযোগী কাঠ পাওয়া যাবে ৭৮.৫%



\n\nকাঠের হিসাব pdf,দরজার কাঠের হিসাব,কাঠের তক্তার হিসাব,কাঠের লগ বই,কাঠের মাপের সূত্র,গুড়ি মাপার পদ্ধতি,গাছ কত ফুট আছে মাপার নিয়ম, গাছ কিভাবে পরিমাপ করা হয়,

\n\nআমরা যদি সরাসরি ওনার সুত্র ব্যাবহার করি তাহলে অপচয় বাদ দিয়ে ব্যাবহার উপযোগী কাঠের পরিমান সহজেই বের করতে পারবো৷

\n\nআর যদি আমাদের প্রচলিত নিয়মে\n\n

πr^2×h = আয়তন\n\n

এই সুত্র ব্যবহার করি তাহলে প্রাপ্ত আয়তন থেকে ২১.৫ % বাদ দিতে হবে বা সর্বোমোট আয়তনের ৭৮.৫% ধরতে হবে তাহলে, ব্যাবহার উপযোগী নিট কাঠের আয়তন জানা যাবে৷

\n\nএখন আমরা বাজারে বহুল প্রচলিত সুত্র গুলোকে নিয়ে আলোচনা করবো৷\n\n

কাঠের আয়তন বের করতে হপ্পাস সাহেবের সুত্রটা কি ছিলো?\n\n

Formula\n
V = (G ÷ 4)² * L ÷ 144\n\n

যেখানে,\n
V = volume in Hoppus feet\n
G = girth measured mid point of the log in inches ( গাছের মাঝ বরাবর অংশের পরিধি)\n
L = length of log in feet ( গাছ বা লগের দৈর্ঘ্য)\n\n

আমাদের দেশে প্রচলিত সুত্র দুইটা কিন্তু এই সুত্র থেকেই আসছে৷\n\n

সুত্র ১ = {(পরিধি × পরিধি) ফিটে × দৈর্ঘ্য (ফিটে)} ÷ ১৬ = সিএফটি\n

সুত্র ২ = {(পরিধি × পরিধি) ইঞ্চিতে × দৈর্ঘ্য (ফিটে)} ÷ ২৩০৪ = সিএফটি\n\n

সুত্র ১\n\n
এই সুত্রটা হপ্পাসের সুত্র থেকে সরাসরি আসছে ৪ এর স্কয়ার করলে ১৬, আর ১৪৪ দিয়ে ভাগ করা হয়নি কারন সরাসরি ফিটে পরিধির মাপ লেখা হয়েছে৷\n\n

সুত্র ২\n
সুত্র ২ সুত্র ১ থেকে আসছে, এখানে পরিধি ইঞ্চিতে লেখার কারনে শেষে ১৬×(১২×১২)= ২৩০৪ দিয়ে ভাগ দিতে হয়েছে৷\n

সুত্র ২ সবচেয়ে জনপ্রিয় হওয়ার কারন এটায় হিসাব সহজ এবং দ্রুত করা যায়৷ হিসাবও নির্ভুল আসে৷\n

সুত্র ১ কম জনপ্রিয় হওয়ার কারন এটায় ফিটে লিখতে হয়, গাছের পরিধি ইঞ্চিতে পরিমাপ করা সহজ৷ তবে এই ইঞ্চি কে ফিটে নিতে গেলে ভুল হওয়ার সম্ভাবনা থাকে তাই সুুত্র ২ বেশী প্রচলিত এবং জনপ্রিয়৷

\nএখন আমরা দুইটা সুত্র উদাহরণসহ চেক করবো৷\n\n

প্রশ্ন\n\n
লগের পরিধি ৬০” লগ দৈর্ঘ্য = ৮ ফুট৷\n\n

সুত্র ২ অনুসারে\n
৬০×৬০×৮÷২৩০৪= ১২.৫ সিএফটি\n\n

প্রচলিত গানিতিক সুত্র অনুসারে\n
πr^2×h\n

এখানে r= 9.549″ বা ( 0.79575 ‘)\n
[ r এর মান বের করতে 2πr সুত্রটি ব্যাবহার করা হয়েছে ]\n

এখন উপরের সু্ত্র অনুসারে\n
πr^2×h\n
22/7×(0.79575)^2×8\n
= 15.914 × 78.5% ( হপ্পাস এর সুুত্র অনুসারে)\n
= 12.492 সিএফটি৷\n\n

গাছ মাপার সূত্র, কাঠের মাপ, গাছ মাপার হিসাব, তক্তা কাঠের হিসাব, কাঠের সেফটি হিসাব, এক সেফটি কাঠ কত ইঞ্চি, কাঠের মাপ, কাঠের হিসাব pdf, কাঠ পরিমাপের সূত্র, কাঠের হিসাব নিয়ম, গাছের কাঠের কেবি হিসাব, কাঠ মাপার নিয়ম, কাঠের cft হিসাব, সাইজ কাঠ সিফটিতে মাপার নিয়ম,চেরাই কাঠের হিসাব,
\n\n
সূত্র:<i>ইন্টারনেট</i>\n\n </string>
    <string name="powered_by">Developed by</string>
    <string name="contain_not_availabe">Contain not availabe</string>
    <string name="to">To:</string>
    <string name="support_techzweb_com">support@TechZweb.com</string>
    <string name="message">Message:</string>
    <string name="send">send</string>
    <string name="subject">Subject:</string>
    <string name="notice1">শুধু ফুট দিয়ে মাপতে চাইলে ,ইঞ্চি ঘরে অবশ্যই ০ দিতে হবে অথবা শুধু ইঞ্চি দিয়ে মাপতে চাইলে ,ফুট ঘরে অবশ্যই ০ দিতে হবে । অথবা ২ টি দিয়েই মাপতে পারবেন</string>
    <string name="length1">দৈর্ঘ্য- ১:</string>
    <string name="feet">ফুট</string>
    <string name="inchi">ইঞ্চি</string>
    <string name="lenght2">দৈর্ঘ্য- ২:</string>
    <string name="width1">প্রস্থ - ১:</string>
    <string name="width2">প্রস্থ - ২:</string>
    <string name="see_result">ফলাফল দেখুন</string>
    <string name="remove">মুছুন</string>
    <string name="devideinfo1">কত শতাংশ জমি আলাদা করতে চান ?</string>
    <string name="_0_0">0.0</string>
    <string name="anylength">যে কোন এক পাশের দৈর্ঘ্য দিন -</string>
    <string name="know">জানুন</string>
    <string name="land_calculator">ভূমি পরিমাপ</string>
    <string name="land_devide">ভূমি বিচ্ছেদ / আলাদা</string>
    <string name="stone_soil_calculator">ইট, পাথর, বালু পরিমাপ</string>
    <string name="scale_wood_cal">সাইজ কাঠের পরিমাপ</string>
    <string name="play_video">Play Video</string>
    <string name="price_calculator">মূল্য হিসাব করুন</string>
    <string name="wood2_calculator">গোল কাঠের পরিমাপ</string>
    <string name="app_use">এপ ব্যবহার</string>
    <string name="calculator_info">পরিমাপ সংক্রান্ত তথ্য</string>
    <string name="more_apps">আরো এপ সমূহ</string>
    <string name="app_infos">অ্যাপ্লিকেশন তথ্য</string>
    <string name="subscribe">Subscribe</string>
    <string name="lentgh1">দৈর্ঘ্য-১:</string>
    <string name="length2">দৈর্ঘ্য- ২:</string>
    <string name="height1">উচ্চতা - ১:</string>
    <string name="height2">উচ্চতা - ২:</string>
    <string name="info2">প্রতি কেজি,গ্রাম,শতাংশ,সিএফটি..</string>
    <string name="dormullo">দর/মূল্য/কত করে ?</string>
    <string name="howcft">কত কেজি,গ্রাম,শতাংশ,সিএফটি..?</string>
    <string name="measurement">কত টুকু / পরিমাপ ?</string>
    <string name="total">সর্বমোট</string>
   <string name="lenght">দৈর্ঘ্য :</string>
    <string name="width">প্রস্থ :</string>
    <string name="height">উচ্চতা :</string>
    <string name="round">বেড় :</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="type_your_message_here">Type your Message here...</string>


</resources>
