<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:background="@color/cardview_dark_background"
    tools:context="com.nurdev.landmeasurement.feedback">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textColor="#fff"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/text_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="7dp"
                    android:textColor="#fff"
                    android:text="@string/support_techzweb_com"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subject"
                android:layout_marginTop="5dp"
                android:textColor="#fff"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:hint="@string/enter_subject"
                android:background="#fff"
                android:textColorHint="#808080"
                android:id="@+id/edit_text_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailSubject"
                android:textColor="#000000"
                android:padding="7dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:background="#fff"
                android:id="@+id/edit_text_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:lines="10"
                android:textColorHint="#808080"
                android:hint="@string/type_your_message_here"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textColor="#000000"
                />

            <Button
                android:id="@+id/button_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:background="#000"/>
        </LinearLayout>
    </ScrollView>

<!--    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-2274616816336456/3730665094">
    </com.google.android.gms.ads.AdView>-->
</RelativeLayout>