<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context="com.nurdev.landmeasurement.AppInfo">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_above="@+id/p"
        android:gravity="center"
        android:textColor="@color/Black"
        android:textSize="20sp"
        android:layout_margin="8dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/techzweb"
        android:id="@+id/techzweb"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by"
        android:layout_above="@id/techzweb"
        android:layout_centerInParent="true" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_info"
        android:autoLink="all"
        android:textColorLink="#B50101"
        android:textColor="#3A3A3A"
        android:layout_below="@id/techzweb"

        android:layout_centerInParent="true" />
<!--
   android:layout_above="@id/adView"
 <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-2274616816336456/3730665094">
    </com.google.android.gms.ads.AdView>-->

</RelativeLayout>