<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context="com.nurdev.landmeasurement.LandShareCalculator">
    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/devideinfo1"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/Black"/>
            <EditText
                android:textColor="@color/Black"
                android:textColorHint="#817B7B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_0_0"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textSize="35sp"
                android:background="@drawable/input_text"
                android:layout_margin="20dp"
                android:id="@+id/sotokId"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Black"
                android:orientation="vertical">

                <TextView
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anylength"
                    android:gravity="center"
                    android:textColor="@color/White"
                    android:textSize="25sp">

                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <EditText
                        android:textColor="@color/Black"
                        android:textColorHint="#817B7B"
                        android:id="@+id/lenthId"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@drawable/input_text"
                        android:hint="@string/feet"
                        android:inputType="numberDecimal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:gravity="center"
                        android:textSize="35sp"/>
                    <EditText
                        android:textColor="@color/Black"
                        android:textColorHint="#817B7B"
                        android:id="@+id/lenthiId"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@drawable/input_text"
                        android:hint="@string/inchi"
                        android:inputType="numberDecimal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:gravity="center"
                        android:textSize="35sp"/>
                </LinearLayout>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/know"
                    android:textSize="30sp"
                    android:background="@color/Green"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/White"
                    android:id="@+id/submitId"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/White"
                    android:textColor="@color/Green"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    android:id="@+id/resulttextId"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
<!--    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-2274616816336456/3730665094">
    </com.google.android.gms.ads.AdView>-->

</RelativeLayout>